Super update